--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-compose": "^7.21.1",
